# mypoly_bot

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  telemetry.rs
src/engine/: mod.rs
src/engine/core/: inventory.rs  matching.rs  mod.rs  params.rs  risk.rs  state.rs  strategy.rs
src/engine/data/: discovery.rs  mod.rs  price_feeder.rs
src/engine/execution/: executor.rs  mod.rs  order_manager.rs  user_ws.rs  ws_handler.rs
src/engine/redeem/: mod.rs
src/engine/telemetry/: events.rs  latency.rs  mod.rs  sinks.rs  stats.rs
